--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@discordjs/builders": "^0.8.2",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.0",
-    "glob": "^7.2.0",
-    "ascii-table": "^0.0.9"
+    "glob": "^7.2.0"
   }
 }
