--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node main.js debug"
+    "test": "node project/main.js debug"
   },
   "keywords": [],
   "author": "Leguan",
