--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "discord-api-types": "^0.25.0",
-    "discord.js": "^13.3.1",
-    "glob": "^7.2.0"
+    "discord.js": "^13.8.0",
+    "glob": "^7.2.0",
+    "discord-fetch-all": "^3.0.2"
   }
 }
